--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "./dev.sh",
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "build-types": "npx tsc --declaration --emitDeclarationOnly src/types.d.ts"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
