--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.27.9",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^22.9.0",
     "dotenv": "^16.4.5",
