--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "./dev.sh",
     "build": "npx tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "npx eslint --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^22.9.0",
     "dotenv": "^16.4.5",
+    "eslint": "^9.14.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
   "dependencies": {
