--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -22,6 +22,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Format code with Prettier (fixes ${GITHUB_EVENT_BEFORE})"
           git push origin main
