--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -25,5 +25,6 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Format code with Prettier (fixes ${GITHUB_EVENT_BEFORE})"
+          PREVIOUS_COMMIT=$(git rev-parse HEAD~1)
+          git commit -m "Format code with Prettier (fixes $PREVIOUS_COMMIT)"
           git push origin main
