--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dis-cogs",
-  "version": "0.2.0",
+  "version": "0.2.1-beta",
   "description": "Discogs is a discord.js bot template that uses the idea of discord.py's Cogs feature and implements it on discord.js",
   "main": "dist/src/index.js",
   "scripts": {
