fix: update main entry point to src directory and bump version to 0.3.0-beta.1

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dis-cogs",
-  "version": "0.2.1-beta.2",
+  "version": "0.3.0-beta.1",
   "description": "Discogs is a discord.js bot template that uses the idea of discord.py's Cogs feature and implements it on discord.js",
-  "main": "dist/main.js",
+  "main": "dist/src/main.js",
   "scripts": {
     "dev": "./dev.sh",
     "build": "npx tsc",
